# Mujoco_MobileRobot

./: README.md  pyproject.toml  test_a_star.py  test_dwa.py  test_mpc.py  test_rl.py  test_rrt.py
.github/: copilot-instructions.md
control/: TrajectoryGenerator.py  mpc_casadi.py
env/: DiffDrive_Env.py  goal_env.py  mujoco_visualization.py  robot.py
env/assets/: rrt_connect_scene.xml
learning/tensorboard/PPO_1/: events.out.tfevents.1772786255.hucheyu.53048.0
planning/: DWA.py  a_star.py
planning/RRT/: rrt.py  rrt_star.py
utils/: __init__.py  file_process.py  gridmap_2d.py  plot_script.py  utils.py
